--- a/public/package.json
+++ b/public/package.json
@@ -9,10 +9,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^0.28.0",
+    "style-loader": "^0.16.1",
     "webpack": "^2.2.1"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1"
+    "bootstrap-wysiwyg": "^2.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "jquery": "^2.1.4",
+    "vue": "^2.2.6",
+    "vue-cookie": "^1.1.4",
+    "vue-resource": "^1.3.0"
   }
 }
