add image processing

--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "error": "^7.0.2",
     "express": "^4.15.2",
     "express-fileupload": "^0.1.2",
+    "file-type": "^4.1.0",
     "font-awesome": "^4.7.0",
+    "fs-promise": "^2.0.2",
+    "jpg-stream": "^1.1.1",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "mustache-express": "^1.2.4",
     "node-time-ago": "^1.0.0",
     "nodemon": "^1.11.0",
+    "png-stream": "^1.0.5",
+    "resizer-stream": "^1.0.1",
     "rfr": "^1.2.3",
     "then-mongo": "^2.3.2",
     "uuid": "^3.0.1"
