--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-time-ago": "^1.0.0",
     "nodemon": "^1.11.0",
     "png-stream": "^1.0.5",
+    "progressbar.js": "^1.0.1",
     "resizer-stream": "^1.0.1",
     "rfr": "^1.2.3",
     "sharp": "^0.17.3",
