--- a/public/package.json
+++ b/public/package.json
@@ -18,6 +18,7 @@
     "bootstrap-wysiwyg": "^2.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "jquery": "^2.1.4",
+    "progressbar.js": "^1.0.1",
     "vue": "^2.2.6",
     "vue-cookie": "^1.1.4",
     "vue-resource": "^1.3.0"
